# rust-todo-poem-openapi

./: .env  Cargo.toml  README.md
migrations/: 20250808150656_create-users-table.sql  20250808151243_create-todo-table.sql  20250809191952_update_todos_completed_not_null.sql
src/: database.rs  handlers.rs  main.rs  models.rs
