[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = ["chrono", "swagger-ui"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.0", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
